--- a/src/main/resources/com/example/calculatrice_0/Windows.fxml
+++ b/src/main/resources/com/example/calculatrice_0/Windows.fxml
@@ -14,7 +14,7 @@
     </padding>
    <AnchorPane prefHeight="566.0" prefWidth="332.0" translateY="40.0">
       <children>
-         <Pane layoutX="2.0" layoutY="172.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Numero7" layoutX="2.0" layoutY="172.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
                <Circle fill="#444444" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="23.0" layoutY="7.0" text="7" textFill="WHITE">
@@ -23,7 +23,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="92.0" layoutY="172.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Numero8" layoutX="92.0" layoutY="172.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
                <Circle fill="#444444" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="22.0" layoutY="7.0" text="8" textFill="WHITE">
@@ -32,16 +32,16 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="180.0" layoutY="172.0" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Numero9" layoutX="180.0" layoutY="172.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
-               <Circle fill="#444444" layoutX="32.0" layoutY="32.0" onMouseClicked="#onNumberClicked" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
+               <Circle fill="#444444" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="22.0" layoutY="7.0" text="9" textFill="WHITE">
                   <font>
                      <Font size="34.0" />
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="268.0" layoutY="173.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #FFA500;" stylesheets="@Windows.css">
+         <Pane fx:id="Mult" layoutX="268.0" layoutY="173.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #FFA500;" stylesheets="@Windows.css">
             <children>
                <Circle fill="ORANGE" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="24.0" layoutY="7.0" text="x" textFill="WHITE">
@@ -50,7 +50,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="2.0" layoutY="248.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Numero4" layoutX="2.0" layoutY="248.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
                <Circle fill="#444444" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="23.0" layoutY="7.0" text="4" textFill="WHITE">
@@ -59,7 +59,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="92.0" layoutY="248.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Numero5" layoutX="92.0" layoutY="248.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
                <Circle fill="#444444" layoutX="31.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="22.0" layoutY="7.0" text="5" textFill="WHITE">
@@ -68,7 +68,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="180.0" layoutY="247.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Numero6" layoutX="180.0" layoutY="247.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
                <Circle fill="#444444" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="22.0" layoutY="7.0" text="6" textFill="WHITE">
@@ -77,7 +77,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="268.0" layoutY="247.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #FFA500;" stylesheets="@Windows.css">
+         <Pane fx:id="Sub" layoutX="268.0" layoutY="247.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #FFA500;" stylesheets="@Windows.css">
             <children>
                <Circle fill="ORANGE" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="24.0" layoutY="3.0" text="-" textFill="WHITE">
@@ -86,7 +86,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="2.0" layoutY="323.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Numero1" layoutX="2.0" layoutY="323.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
                <Circle fill="#444444" layoutX="31.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="22.0" layoutY="7.0" text="1" textFill="WHITE">
@@ -95,7 +95,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="92.0" layoutY="323.0" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Numero2" layoutX="92.0" layoutY="323.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
                <Circle fill="#444444" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="22.0" layoutY="7.0" text="2" textFill="WHITE">
@@ -104,7 +104,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="180.0" layoutY="323.0" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Numero3" layoutX="180.0" layoutY="323.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
                <Circle fill="#444444" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="22.0" layoutY="7.0" text="3" textFill="WHITE">
@@ -113,7 +113,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="268.0" layoutY="322.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #FFA500;" stylesheets="@Windows.css">
+         <Pane fx:id="Add" layoutX="268.0" layoutY="322.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #FFA500;" stylesheets="@Windows.css">
             <children>
                <Circle fill="ORANGE" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="20.0" layoutY="7.0" text="+" textFill="WHITE">
@@ -122,7 +122,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="2.0" layoutY="399.0" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Numero0" layoutX="2.0" layoutY="399.0" onMouseClicked="#onNumberClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
                <Circle fill="#444444" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="22.0" layoutY="7.0" text="0" textFill="WHITE">
@@ -131,12 +131,12 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="92.0" layoutY="398.0" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Push" layoutX="92.0" layoutY="398.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
                <Circle fill="#444444" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="17.0" layoutY="23.0" text="None" textFill="WHITE" />
             </children></Pane>
-         <Pane layoutX="180.0" layoutY="399.0" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
+         <Pane fx:id="Virgule" layoutX="180.0" layoutY="399.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #444444;" stylesheets="@Windows.css">
             <children>
                <Circle fill="#444444" layoutX="32.0" layoutY="32.0" onMouseClicked="#onSymbolClicked" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="28.0" layoutY="7.0" text="," textFill="WHITE">
@@ -145,7 +145,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="267.0" layoutY="399.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #FFA500;" stylesheets="@Windows.css">
+         <Pane fx:id="Entrer" layoutX="267.0" layoutY="399.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #FFA500;" stylesheets="@Windows.css">
             <children>
                <Circle fill="ORANGE" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="20.0" layoutY="7.0" text="=" textFill="WHITE">
@@ -154,7 +154,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="2.0" layoutY="98.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #C0C0C0;" stylesheets="@Windows.css">
+         <Pane fx:id="Clear" layoutX="2.0" layoutY="98.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #C0C0C0;" stylesheets="@Windows.css">
             <children>
                <Circle fill="SILVER" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label layoutX="12.0" layoutY="9.0" text="AC" textFill="WHITE">
@@ -181,7 +181,7 @@
                   </font>
                </Label>
             </children></Pane>
-         <Pane layoutX="268.0" layoutY="98.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #FFA500;" stylesheets="@Windows.css">
+         <Pane fx:id="Div" layoutX="268.0" layoutY="98.0" onMouseClicked="#onSymbolClicked" prefHeight="64.0" prefWidth="63.0" style="-fx-background-color: #FFA500;" stylesheets="@Windows.css">
             <children>
                <Circle fill="ORANGE" layoutX="32.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                <Label alignment="CENTER" layoutX="18.0" text="÷" textFill="WHITE">
@@ -192,7 +192,7 @@
             </children></Pane>
          <Pane layoutY="-51.0" prefHeight="142.0" prefWidth="344.0">
             <children>
-               <Label layoutX="292.0" layoutY="71.0" text="0" textFill="WHITE">
+               <Label fx:id="Resultat" layoutX="159.0" layoutY="58.0" text="0" textFill="WHITE">
                   <font>
                      <Font size="48.0" />
                   </font>
