--- a/src/main/resources/com/example/calculatrice_0/Windows.css
+++ b/src/main/resources/com/example/calculatrice_0/Windows.css
@@ -1,6 +1,5 @@
-.root {
-    -fx-background-radius: 30;
-    -fx-border-radius: 30;
-    -fx-border-width:5;
+.root{
+    -fx-border-radius: 10 10 0 0;
+    -fx-background-radius: 10 10 0 0;
 }
 
