--- a/src/main/resources/com/example/calculatrice_0/Windows.css
+++ b/src/main/resources/com/example/calculatrice_0/Windows.css
@@ -1,5 +1,6 @@
 .root{
-    -fx-border-radius: 10 10 0 0;
-    -fx-background-radius: 10 10 0 0;
+    -fx-border-radius: 20 20 20 20;
+    -fx-background-radius: 20 20 20 20;
+    -fx-background-color: BLACK;
 }
 
